tests/jastadd/negative/type_errors/L2/5_TypeCheckingCaseStmt.ob
MODULE TestModule;
    VAR i : INTEGER;
BEGIN
    CASE 10+i OF
    i:
    END
END TestModule.
